node18.16.1angular16 added serve and ui loaded successfully for container and child1-2

--- a/child1/angular.json
+++ b/child1/angular.json
@@ -29,7 +29,8 @@
             "scripts": [],
             "customWebpackConfig": {
               "path": "./extra-webpack.config.js"
-            }
+            },
+            "deployUrl": "http://localhost:4201/"
           },
           "configurations": {
             "production": {
