--- a/container/package.json
+++ b/container/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.1",
-    "@angular/common": "~10.0.1",
-    "@angular/compiler": "~10.0.1",
-    "@angular/core": "~10.0.1",
-    "@angular/forms": "~10.0.1",
-    "@angular/platform-browser": "~10.0.1",
-    "@angular/platform-browser-dynamic": "~10.0.1",
-    "@angular/router": "~10.0.1",
-    "import-map-overrides": "^1.8.0",
-    "rxjs": "~6.5.5",
-    "single-spa": "^5.4.2",
-    "single-spa-angular": "^4.6.0",
-    "systemjs": "^6.1.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^16.2.11",
+    "@angular/common": "^16.2.11",
+    "@angular/compiler": "^16.2.11",
+    "@angular/core": "^16.2.11",
+    "@angular/forms": "^16.2.11",
+    "@angular/platform-browser": "^16.2.11",
+    "@angular/platform-browser-dynamic": "^16.2.11",
+    "@angular/router": "^16.2.11",
+    "import-map-overrides": "^3.1.1",
+    "rxjs": "^7.8.1",
+    "single-spa": "^5.9.5",
+    "single-spa-angular": "^9.0.1",
+    "systemjs": "^6.14.2",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^9.1.0",
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.1",
-    "@angular/language-service": "~10.0.1",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@types/systemjs": "^6.1.0",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "@angular-builders/custom-webpack": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.8",
+    "@angular/cli": "^16.2.8",
+    "@angular/compiler-cli": "^16.2.11",
+    "@angular/language-service": "^16.2.11",
+    "@types/jasmine": "^5.1.1",
+    "@types/jasminewd2": "^2.0.12",
+    "@types/node": "^20.8.9",
+    "@types/systemjs": "^6.13.4",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^5.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
