--- a/child1/angular.json
+++ b/child1/angular.json
@@ -30,7 +30,7 @@
             "customWebpackConfig": {
               "path": "./extra-webpack.config.js"
             },
-            "deployUrl": "http://localhost:4201/"
+            "deployUrl": "http://localhost:3000/child1/"
           },
           "configurations": {
             "production": {
