--- a/child3/package.json
+++ b/child3/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:single-spa:Hybrid_jsplusts",
-    "build": "ng build",
+    "build": "npm run build:single-spa:Hybrid_jsplusts",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:single-spa:Hybrid_jsplusts": "ng build Hybrid_jsplusts --configuration production --deploy-url http://localhost:3000/hybrid-jsplusts/",
-    "serve:single-spa:Hybrid_jsplusts": "ng s --project Hybrid_jsplusts --disable-host-check --host 127.0.0.1 --port 7001 --live-reload false"
+    "build:single-spa:Hybrid_jsplusts": "ng build Hybrid_jsplusts --configuration production --deploy-url http://localhost:4203/ --optimization=false",
+    "serve:single-spa:Hybrid_jsplusts": "ng s --project Hybrid_jsplusts --disable-host-check --host 127.0.0.1 --port 4203 --live-reload false"
   },
   "private": true,
   "dependencies": {
