--- a/child3/angular.json
+++ b/child3/angular.json
@@ -34,20 +34,20 @@
               "libraryName": "Hybrid_jsplusts",
               "libraryTarget": "umd"
             },
-            "deployUrl": "http://localhost:7001/"
+            "deployUrl": "http://localhost:4203/"
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "8mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "8kb",
+                  "maximumError": "2mb"
                 }
               ],
               "outputHashing": "none"
